--- a/package.json
+++ b/package.json
@@ -9,18 +9,18 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@radix-ui/react-accordion": "^1.2.2",
-    "@radix-ui/react-dialog": "^1.1.4",
-    "@radix-ui/react-dropdown-menu": "^2.1.4",
-    "@radix-ui/react-navigation-menu": "^1.2.3",
-    "@radix-ui/react-slot": "^1.1.1",
-    "class-variance-authority": "^0.7.1",
-    "clsx": "^2.1.1",
-    "lucide-react": "^0.469.0",
+    "@radix-ui/react-accordion": "^latest",
+    "@radix-ui/react-dialog": "^latest",
+    "@radix-ui/react-dropdown-menu": "^latest",
+    "@radix-ui/react-navigation-menu": "^latest",
+    "@radix-ui/react-slot": "^latest",
+    "class-variance-authority": "^latest",
+    "clsx": "^latest",
+    "lucide-react": "^latest",
     "next": "14.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "tailwind-merge": "^2.6.0"
+    "tailwind-merge": "^latest"
   },
   "devDependencies": {
     "@types/node": "^20.11.0",
